--- a/riffshareiii/parts/exe/plugins/filters/_minium.compressor/ui/cmprui.html
+++ b/riffshareiii/parts/exe/plugins/filters/_minium.compressor/ui/cmprui.html
@@ -6,13 +6,13 @@
 	<script src="dcui.js"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="plugins.css">
+	<link href="https://fonts.googleapis.com/css2?family=WDXL+Lubrifont+SC&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="../../../subwindow.css">
 </head>
 
 <body>
-	<h1>Compressor</h1>
-	<p><span id='numval'>77</span>%</p>
+	<h1 id="title">compressor</h1>
+	<p>Level <span id='numval'>77</span>%</p>
 	<p>
 		<input type="range" id="level"min="0" max="100" value="33" />
 	</p>
