--- a/riffshareiii/parts/exe/plugins/filters/miniumecho1/ui/echo.html
+++ b/riffshareiii/parts/exe/plugins/filters/miniumecho1/ui/echo.html
@@ -3,14 +3,16 @@
 <head>
 	<title>Echo UI</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta charset="UTF-8">
+
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="../../../plugins.css">
+	<link href="https://fonts.googleapis.com/css2?family=WDXL+Lubrifont+SC&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="../../../subwindow.css">
 </head>
 
 <body>
-	<h1>Echo</h1>
+	<h1 id='title'>Echo</h1>
 	<p>Level <span id='numval'>77</span>%<br/>
 		<input type="range" id="level"  min="0" max="100" value="77" />
 	</p>
