--- a/riffshareiii/parts/exe/plugins/filters/miniumdcompressor1/ui/cmprui.html
+++ b/riffshareiii/parts/exe/plugins/filters/miniumdcompressor1/ui/cmprui.html
@@ -2,16 +2,17 @@
 
 <head>
 	<title>Compressor UI</title>
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<script src="dcui.js"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="../../../plugins.css">
+	<link href="https://fonts.googleapis.com/css2?family=WDXL+Lubrifont+SC&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="../../../subwindow.css">
 </head>
 
 <body>
-	<h1>Compressor</h1>
+	<h1 id="title">compressor</h1>
 	<p>Level <span id='numval'>77</span>%</p>
 	<p>
 		<input type="range" id="level"min="0" max="100" value="33" />
