--- a/test/muznavigator/fxplay.html
+++ b/test/muznavigator/fxplay.html
@@ -4,7 +4,8 @@
 	<title>МузНавигатор Демо</title>
 	<meta charset="UTF-8" />
 	<script src="fxplayer.js"></script>
-	<script src="bundle.js"></script>
+	<!-- <script src="bundle.js"></script> -->
+	<script src="tn/purevashift.js"></script>
 </head>
 
 <body>
@@ -58,6 +59,16 @@
 	</p>
 	
 	
+	<script>
+		//window['Tone'] = new Tone2();
+		/*
+		Tone.PitchShift=PitchShift;
+		console.log('Tone',Tone);
+		let pwa=new Tone.PitchShift();
+
+		console.log('pwa',pwa);
+		*/
+	</script>
 </body>
 
 
