--- a/riffshareiii/parts/extensions/minium.yavkshare/publisher/vkread.html
+++ b/riffshareiii/parts/extensions/minium.yavkshare/publisher/vkread.html
@@ -20,7 +20,10 @@
 		<canvas id="prvw" width=500 height=500 onclick="startYAVKupload();" />
 	</p>
 	<p class="cntrblk">
-		<button onclick="startYAVKipload();" id='butonStart'>Отправить</button>
+		<button onclick="startYAVKipload();" id='butonStart'>Отправить YA</button>
+	</p>
+	<p class="cntrblk">
+		<button onclick="postVKarticle();" id='butonStart'>Отправить VK</button>
 	</p>
 </body>
 <script>
