--- a/riffshareiii/parts/exe/plugins/filters/minium.equalizer/ui/equi.html
+++ b/riffshareiii/parts/exe/plugins/filters/minium.equalizer/ui/equi.html
@@ -2,25 +2,26 @@
 
 <head>
 	<title>EQ10b UI</title>
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="../../../plugins.css">
+	<link href="https://fonts.googleapis.com/css2?family=WDXL+Lubrifont+SC&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="../../../subwindow.css">
 </head>
 
 <body>
 	<h1>Equalizer</h1>
-	<p>32 Hz: <span id='label32'>77</span> db<br /><input type="range" id="band32" min="-12" max="12" value="7" /> </p>
-	<p>64 Hz: <span id='label64'>77</span><br /><input type="range" id="band64" min="-12" max="12" value="-7" /> </p>
-	<p>128 Hz: <span id='label128'>77</span><br /><input type="range" id="band128" min="-12" max="12" value="11" /> </p>
-	<p>256 Hz: <span id='label256'>77</span><br /><input type="range" id="band256" min="-12" max="12" value="12" /> </p>
-	<p>512 Hz: <span id='label512'>77</span><br /><input type="range" id="band512" min="-12" max="12" value="8" /> </p>
-	<p>1k Hz: <span id='label1k'>77</span><br /><input type="range" id="band1k" min="-12" max="12" value="9" /> </p>
-	<p>2k Hz: <span id='label2k'>77</span><br /><input type="range" id="band2k" min="-12" max="12" value="0" /> </p>
-	<p>4k Hz: <span id='label4k'>77</span><br /><input type="range" id="band4k" min="-12" max="12" value="-3" /> </p>
-	<p>8k Hz: <span id='label8k'>77</span><br /><input type="range" id="band8k" min="-12" max="12" value="-4" /> </p>
-	<p>16k Hz: <span id='label16k'>77</span><br /><input type="range" id="band16k" min="-12" max="12" value="-5" /> </p>
+	<p>32 Hz: <span id='label32'>77</span>db<br /><input type="range" id="band32" min="-12" max="12" value="7" /> </p>
+	<p>64 Hz: <span id='label64'>77</span>db<br /><input type="range" id="band64" min="-12" max="12" value="-7" /> </p>
+	<p>128 Hz: <span id='label128'>77</span>db<br /><input type="range" id="band128" min="-12" max="12" value="11" /> </p>
+	<p>256 Hz: <span id='label256'>77</span>db<br /><input type="range" id="band256" min="-12" max="12" value="12" /> </p>
+	<p>512 Hz: <span id='label512'>77</span>db<br /><input type="range" id="band512" min="-12" max="12" value="8" /> </p>
+	<p>1k Hz: <span id='label1k'>77</span>db<br /><input type="range" id="band1k" min="-12" max="12" value="9" /> </p>
+	<p>2k Hz: <span id='label2k'>77</span>db<br /><input type="range" id="band2k" min="-12" max="12" value="0" /> </p>
+	<p>4k Hz: <span id='label4k'>77</span>db<br /><input type="range" id="band4k" min="-12" max="12" value="-3" /> </p>
+	<p>8k Hz: <span id='label8k'>77</span>db<br /><input type="range" id="band8k" min="-12" max="12" value="-4" /> </p>
+	<p>16k Hz: <span id='label16k'>77</span>db<br /><input type="range" id="band16k" min="-12" max="12" value="-5" /> </p>
 </body>
 <script src="eq10ui.js"></script>
 <script>
