--- a/riffshareiii/parts/extensions/minium.equalizer/ui/equi.html
+++ b/riffshareiii/parts/extensions/minium.equalizer/ui/equi.html
@@ -2,11 +2,12 @@
 
 <head>
 	<title>EQ10b UI</title>
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="../../../plugins.css">
+	<link href="https://fonts.googleapis.com/css2?family=WDXL+Lubrifont+SC&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="../../../subwindow.css">
 </head>
 
 <body>
