--- a/riffshareiii/parts/exe/plugins/actions/baredit1/mied.html
+++ b/riffshareiii/parts/exe/plugins/actions/baredit1/mied.html
@@ -8,6 +8,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=WDXL+Lubrifont+SC&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="../../subwindow.css">
+	<script type='text/javascript' src='../../../js/mzxbxlib.js'></script>
 </head>
 
 <body>
