--- a/riffshareiii/parts/exe/minium.studio.html
+++ b/riffshareiii/parts/exe/minium.studio.html
@@ -34,7 +34,7 @@
 	<title>ZvoogHub</title>
 </head>
 
-<body>
+<body id='fsbodyroot'>
 	<div id="pluginActionDiv">
 		<div id="pluginActionHeader">
 			<div id="pluginActionTitle">Action plugin UI</div>
