--- a/riffshareiii/parts/exe/plugins/actions/alphatabimport1/ui.html
+++ b/riffshareiii/parts/exe/plugins/actions/alphatabimport1/ui.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-	<h1>*.gp3, gp4, gp5, gpx, gp, mxl, musicxml, mid</h1>
-    <p><input type="file" id="file_at_input" onchange="plugin.loadMusicfile(this);" accept=".gp3, .gp4, .gp5, .gpx, .gp, .mxl, .musicxml, .mid"  /></p>
+	<h1>*.gp3, gp4, gp5, gpx, gp, mxl, musicxml, mid, json</h1>
+    <p><input type="file" id="file_at_input" onchange="plugin.loadMusicfile(this);" accept=".gp3, .gp4, .gp5, .gpx, .gp, .mxl, .musicxml, .mid, .json"  /></p>
 	<p class="cntrblk">
 		<button onclick='plugin.sendImportedMusicData();'>Send</button>
 	</p>
