--- a/riffshareiii/parts/extensions/minium.writer/miex.html
+++ b/riffshareiii/parts/extensions/minium.writer/miex.html
@@ -13,16 +13,19 @@
 
 <body>
 	<h1 id="plugintitle">Minium MIDI Export</h1>
+	<p class="cntrblk">
+		<canvas  id="prvw" width=500 height=500 onclick="plugin.exportImage();"/>
+	</p>
 	<div class='centercolumn'>
-		
-		<p class="cntrlrow"><button id='btnsend' onclick="plugin.startExport();">btnsend</button></p>
-
+		<p class="cntrlrow"><button id='btnsendmidi' onclick="plugin.startExportMIDI();">btnsend</button></p>
+	</div>
+	<div class='centercolumn'>
+		<p class="cntrlrow"><button id='btnsendjson' onclick="plugin.startExportJSON();">btnsend2</button></p>
 	</div>
 </body>
 <script type='text/javascript' src='mx.js'></script>
 <script>
 	let plugin = new MiniumMIDIx();
-	
 </script>
 
 </html>
